--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
 <script>
   const images = [
-    '1Green.png',  // Green
-    '2Yellow.png', // Yellow
-    '3Red.png'     // Red
+    '1Green.jpg',  // Green
+    '2Yellow.jpg', // Yellow
+    '3Red.jpg'     // Red
   ];
 
   // Varible countdown
@@ -171,4 +171,5 @@
 </script>
 
 </body>
+
 </html>
