--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     bottom: 15px;
     left: 18px;
     font-size: 34px;
+    -webkit-text-stroke: 0.5px black;
     color: rgba(255, 255, 255, 0.7);
     font-family: Century Gothic;
     user-select: none;
@@ -173,3 +174,4 @@
 </body>
 
 </html>
+
